# data_science_project_template

./: INTRODUCTION.md  README.md
.github/: README.md
project/: pyproject.toml
project/package/methods/notebooks/: main.ipynb
